# API

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docs.py  pyproject.toml  requirements.txt
.github/workflows/: build-release.yml  generate-oas.yml
api/api-reference/: cameras.md  stream.md
docs/: README.md  SUMMARY.md  configuration.md  getting-started-generic-devices.md
docs/.gitbook/assets/: hello_world.py  hello_world_train.ipynb  oas.yaml  oas.yml
docs/api/: configuration.md  setup.md
docs/api-reference/: cameras.md  neural-network.md  sensors.md  stream.md
docs/api-reference/controller/: README.md  analog-i-o.md  led.md
docs/api/api-reference/: analog-i-o.md  cameras.md  digital-i-o.md  led.md  neural-network.md  sensors.md  stream.md
docs/api/rest-api-reference/: README.md  analog-i-o.md  cameras.md  controller.md  digital-i-o.md  led.md  neural-network.md  sensors.md  streams.md
docs/api/websocket-api-reference/: README.md  nn-inference.md  stream.md
docs/controller/: description.md  os.md
docs/controller/inputs-outputs/: README.md  analog-inputs.md  analog-outputs.md  digital-inputs.md  digital-outputs.md  relay-outputs.md
docs/examples/: capsule-counting.md
docs/getting-started/: connection.md  hello-world.md  supported-devices.md
docs/other/: generic-devices.md
robopipe-api/: app.py  robopipe.py  stream.py  video_encoder.py
robopipe-api/camera/: camera.py  camera_manager.py  device_info.py  pipeline.py  sensor.py  sensor_config.py  sensor_control.py
robopipe-api/handler/: __init__.py  base_handler.py  camera_handler.py  sensor_handler.py  stream_handler.py
robopipe-api/mapper/: device_info.py
robopipe-api/routers/: cameras.py  sensors.py
robopipe-api/utils/: image.py  singleton.py
robopipe_api/: __init__.py  __main__.py  error.py  log.py  robopipe.py  stream.py  video_encoder.py  websocket.py
robopipe_api/camera/: camera.py  camera_manager.py  camera_stats.py  device_info.py  ir.py  nn.py  pipeline.py  sensor.py  sensor_config.py  sensor_control.py
robopipe_api/camera/pipeline/: depth_pipeline.py  nn_pipeline.py  pipeline.py  pipeline_queue_type.py  streaming_pipeline.py
robopipe_api/controller/: config.py  devents.py  devices.py  modbus_slave.py  modbus_unipi.py  owdevice.py
robopipe_api/models/: analog_input.py  analog_output.py  base_model.py  device.py  digital_input.py  digital_output.py  led.py  modbus.py  nn_config.py  ow.py  sensor_control.py  stream_info.py
robopipe_api/routers/: cameras.py  common.py  controller.py  sensors.py  streams.py
robopipe_api/utils/: detections_parser.py  image.py  ws_adapter.py
(+9 files in other folders)
