[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robopipe-api"
version = "0.1.0"
description = "API for the Robopipe application"
authors = []
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.scripts]
robopipe-api = "robopipe_api.robopipe:main"
