[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "robopipe-api"
description = "API for the Robopipe application"
authors = [
    { name = "Adam Berkes", email = "adam.berkes@koala42.com" },
    { name = "Filip Molcik", email = "filip.molcik@koala42.com" },
]
readme = "README.md"
license = { file = "LICENSE" }
keywords = [
    "computer-vision",
    "cv",
    "industrial-automation",
    "machine-vision",
    "visual-inspection",
    "machine-vision-camera",
    "vision-system",
    "automated-inspection",
    "industrial-machine-vision",
]
requires-python = ">=3.11"
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://robopipe.io"
Documentation = "https://robopipe.gitbook.io/robopipe"
Repository = "https://github.com/Robopipe/API"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { attr = "robopipe_api._version.__version__" }

[tool.setuptools_scm]
version_file = "robopipe_api/_version.py"
local_scheme = "no-local-version"


[project.scripts]
robopipe-api = "robopipe_api.robopipe:main"
